tests/error/i32_u64_return.vow
// TEST: stderr "return type mismatch"
// TEST: error-code TypeMismatch
// A genuine i32 parameter in an explicit `return` must not coerce to u64.
module I32U64Return

fn widen(x: i32) -> u64 {
  return x;
}

fn main() -> i32 {
  0
}
